# Safehill-kClient

./: .gitignore  .gitmodules  README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
image-engine/: build.gradle.kts
image-engine/src/main/: AndroidManifest.xml
image-engine/src/main/cpp/: .gitignore  CMakeLists.txt  image_engine.cpp
image-engine/src/main/cpp/include/BitmapUtils/: AndroidBitmapWrapper.h  BitmapUtils.h
image-engine/src/main/cpp/include/ImageUtils/: ImageUtils.h  Types.h
image-engine/src/main/cpp/include/InferenceEngine/: InferenceEngine.h
image-engine/src/main/cpp/include/JNIUtils/: JNIUtils.h
image-engine/src/main/cpp/include/MNNHelper/: MNNHelper.h
image-engine/src/main/cpp/include/UpscalingEngine/: UpscalingEngine.h  image_tile_interpreter.h
image-engine/src/main/cpp/src/BitmapUtils/: AndroidBitmapWrapper.cpp  BitmapUtils.cpp
image-engine/src/main/cpp/src/ImageUtils/: ImageUtils.cpp
image-engine/src/main/cpp/src/InferenceEngine/: InferenceEngine.cpp  InferenceEngineJNI.cpp  InferenceEngine_demo.cpp  coroutine_utils.cpp  coroutine_utils.h  image_tile_interpreter.cpp
image-engine/src/main/cpp/src/JNIUtils/: JNIUtils.cpp
image-engine/src/main/cpp/src/MNNHelper/: MNNHelper.cpp
image-engine/src/main/cpp/src/UpscalingEngine/: UpscalingEngine.cpp  UpscalingEngineJNI.cpp  UpscalingEngine_demo.cpp  image_tile_interpreter.cpp  progress_tracker.cpp
src/main/kotlin/: Main.kt
src/main/kotlin/com/safehill/: SafehillClient.kt
src/main/kotlin/com/safehill/auto_sign_in/: SignInRetryHandler.kt
src/main/kotlin/com/safehill/clip_embeddings/: FileUtils.kt  ModelFileProvider.kt
src/main/kotlin/com/safehill/kclient/: SHAssetDownloaderDelegate.kt
src/main/kotlin/com/safehill/kclient/api/: SHHTTPAPI.kt  SHSafehillAPI.kt  SafehillApi.kt  SafehillApiImpl.kt
src/main/kotlin/com/safehill/kclient/controllers/: AssetsDownloadManager.kt  AssetsLibraryController.kt  ConversationThreadController.kt  EncryptionDetailsController.kt  LocalAssetStoreController.kt  LocalAssetsStoreController.kt  PhotosIndexer.kt  SHS3Proxy.kt  SHUserInteractionController.kt  UserController.kt  UserInteractionController.kt  UsersController.kt
src/main/kotlin/com/safehill/kclient/database/: AppDatabase.kt  Converters.kt
src/main/kotlin/com/safehill/kclient/errors/: BackgroundOperationError.kt  CipherError.kt  DownloadError.kt  LocalUserError.kt  SHBackgroundOperationError.kt  SHLocalUserError.kt
src/main/kotlin/com/safehill/kclient/logging/: SafehillLogger.kt
src/main/kotlin/com/safehill/kclient/models/: Asset.kt  CachingImageManager.kt  DownloadBlacklist.kt  GenericFailureResponse.kt  SHAssetDescriptor.kt  SHAssetDescriptorImpl.kt  SHAssetDescriptorUploadState.kt  SHAssetQuality.kt  SHDecryptedAsset.kt  SHEncryptedAsset.kt  SHEncryptedAssetImpl.kt  SHEncryptedAssetVersion.kt  SHEncryptedAssetVersionImpl.kt  SHGenericDecryptedAsset.kt  SHGenericEncryptedAsset.kt  SHInteractionsGroupDTO.kt  SHLocalUser.kt  SHMessageInput.kt  SHMessageOutputDTO.kt  SHReactionInput.kt  SHReactionOutputDTO.kt  SHReactionType.kt  SHRemoteUser.kt  (+8 more)
src/main/kotlin/com/safehill/kcrypto/: SHCypher.kt  SafehillCypher.kt  SafehillOTP.kt
src/main/kotlin/com/safehill/safehillclient/: SafehillClient.kt  SafehillClientBuilder.kt  SafehillSDKBuilder.kt
src/main/kotlin/crypto/: SHCypher.kt
src/main/kotlin/crypto/models/: SHCryptoUser.kt  SHKeyPair.kt  SHShareablePayload.kt  SHSignature.kt  SHSymmetricKey.kt
src/test/kotlin/com/safehill/kcrypto/: CipherTests.kt  CryptoUserTests.kt  KeyEncodingTests.kt  SHCryptoUserTests.kt  SHCypherTest.kt  SafehillCypherTest.kt
src/test/kotlin/com/safehill/mock/: SHLocalUserSpy.kt  ServerProxySpy.kt
src/test/kotlin/crypto/: CipherTests.kt  CryptoTests.kt  KeyEncodingTests.kt
(+469 files in other folders)
